# ngahuru

./: ABOUT-NLS  AUTHORS  Bugs.md  ChangeLog  Makefile.in  ProjectHome.md  README  aclocal.m4  configure  configure.ac
data/: Makefile
po/: Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile.am  Makefile.in  about.c  about.h  callback.c  callback.h  dialog.c  dialog.h  dnd.c  dnd.h  emacs.c  emacs.h  encoding.c  encoding.h  file.c  file.h  font.c  font.h  gnomeprint.c  gnomeprint.h  gtkprint.c  gtkprint.h  hlight.c  hlight.h  i18n.h  indent.c  indent.h  linenum.c  linenum.h  main.c  menu.c  menu.h  ngahuru.h  search.c  search.h  selector.c  selector.h  undo.c  undo.h  utils.c  (+5 more)
